[package]
name = "intrusive-lru-cache"
version = "0.1.0-alpha.1"
edition = "2021"
authors = ["novacrazy <novacrazy@gmail.com>"]
description = "An LRU cache implementation using intrusive data structures"
categories = ["data-structures"]
keywords = ["cache", "lru", "intrusive"]
readme = "README.md"
license = "MIT OR Apache-2.0"
include = ["src/**/*", "LICENSE-*", "README.md"]
repository = "https://github.com/novacrazy/intrusive_lru_cache"
documentation = "https://docs.rs/intrusive-lru-cache"

[dependencies]
intrusive-collections = "0.9.7"
